[UPDATE] Add details to package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "benvis",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple Blog Built by Expressjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "blogging",
+    "expressjs",
+    "nodejs"
+  ],
+  "author": "Mohsen Dorparasti",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
