--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
     "quill-delta-to-html": "^0.12.1"
