[WIP] Implement CI/CD workflow to Cpanel

--- a/.github/workflows/cpanel.yml
+++ b/.github/workflows/cpanel.yml
@@ -9,8 +9,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: pinkasey/cpanel-deploy-action@v1.1.2
         with:
-          hostname: "${{ secrets.CPANEL_HOST }}"
-          repository_root: "${{ secrets.CPANEL_REPO }}"
+          hostname: "https://dorparasti.xyz"
+          repository_root: "/home2/dorparas/blog"
           branch: master
           cpanel_token: "${{ secrets.CPANEL_TOKEN }}"
-          cpanel_username: "${{ secrets.CPANEL_USER }}"
+          cpanel_username: "dorparas"
