--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "hbs": "^4.2.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
-    "quill-delta-to-html": "^0.12.1"
+    "quill-delta-to-html": "^0.12.1",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "dotenv": "^16.3.1"
