--- a/.github/workflows/cpanel.yml
+++ b/.github/workflows/cpanel.yml
@@ -3,10 +3,15 @@ on:
   push:
     branches: [master]
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: npm ci
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - uses: pinkasey/cpanel-deploy-action@v1.1.2
         with:
           hostname: "https://dorparasti.xyz"
