--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -6,3 +6,5 @@ deployment:
     - /bin/cp index.js $DEPLOYPATH
     - /bin/cp package.json $DEPLOYPATH
     - /bin/cp package-lock.json $DEPLOYPATH
+    - cd $DEPLOYPATH
+    - npm install
