--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-NODE_ENV=production
+NODE_ENV=production                       # development | production
 BENVIS_JWTOKEN=0000
 BENVIS_ROUTING_MODE=normal
-BENVIS_DB=mongodb
+BENVIS_DB=mongodb                         # mongodb | json
 MONGODB_URI=mongodb://127.0.0.1/benvis
